# SoftwareDev-MIDTERM

./: CMakeLists.txt  Output.txt  readme.md
app/: AckermannController.cpp
results/: cppcheck  cpplint
results/Valgrind_Outputs/: Valgrind  callgrind.out.6553
test/: AckermannControllerMock.cpp  CMakeLists.txt
